--- a/package.json
+++ b/package.json
@@ -2,7 +2,5 @@
   "name": "terabox-backend",
   "version": "1.0.0",
   "type": "module",
-  "dependencies": {
-    "node-fetch": "^3.3.2"
-  }
+  "dependencies": {}
 }
