--- a/package.json
+++ b/package.json
@@ -1,6 +1,5 @@
 {
-  "name": "terabox-backend",
+  "name": "terabox-extractor",
   "version": "1.0.0",
-  "type": "module",
-  "dependencies": {}
+  "type": "module"
 }
